syntax = "proto3";

option java_package = "com.epam.mentoring";

message MessageRequest {
  string text = 1;
}

message MessageResponse {
  int64 id = 1;
  string text = 2;
}
