syntax = "proto3";

import "messages.proto";

option java_package = "com.epam.mentoring";

service MessageService {
  rpc AddMessage(MessageRequest) returns (MessageResponse) {}
}
